2011-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: New example setting row and column
	names for matrices

2011-04-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: New example using Rcpp.plugin.maker

2011-04-12  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.4
        * inst/NEWS: Release 0.9.4
        * inst/include/Rcpp/config.h: Release 0.9.4
        * debian/*: Similarly updated for new release to Debian

2011-04-12  Romain Francois  <romain@r-enthusiasts.com>

	* inst/unitTests/testRcppModules/src/stdVector.cpp: compiler disambiguation

	* src/r_cast.cpp: use a callback to R's "as.character" instead of calling
	Rf_coerceVector, which did not work as expected for factors

2011-04-11  Romain Francois  <romain@r-enthusiasts.com>

	* R/loadRcppModules.R: New R function "loadRcppModules" that looks
	for the "RcppModules" field in the DESCRIPTION file, loads and
	populates the modules into the package NAMESPACE

	* man/loadRcppModules.Rd: documentation

	* inst/unitTests/testRcppModule: using loadRcppModules

2011-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/man/Rcpp-package.Rd: Added JSS reference in \references{}

	* inst/doc/*: Added JSS reference to vignettes

2011-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/CITATION: Finalized using JSS data on volume, number, pages

2011-04-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-quickref/Rcpp-quickref.Rnw: Add patch by Christian
	pointing out need for Rcpp:: namespace qualifier, and hint for Rcpp-FAQ

2011-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Added OS X entry for min. sufficient
	versions of OS X itself and Xode based on Simon's post to rcpp-devel

2011-04-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.3
        * inst/NEWS: Release 0.9.3
        * inst/include/Rcpp/config.h: Release 0.9.3